2011-01-05  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        change the way we do comment highlighting in the code review tool
        https://bugs.webkit.org/show_bug.cgi?id=51971

        Store a space-separated list of base line IDs on each line that has
        comments associated with that line. This allows for overlapping comments,
        but more importantly, makes adding side-by-side diff support easier.

        * code-review.js:

2011-01-05  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        minor code cleanup for code review tool
        https://bugs.webkit.org/show_bug.cgi?id=51962

        Consolidates some queries to using shared functions.

        * code-review.js:

2011-01-05  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        assorted cleanups to prepare for side-by-side diffing
        https://bugs.webkit.org/show_bug.cgi?id=51961

        Mostly, use selector queries instead of assuming comments are next siblings.

        * code-review.js:

2011-01-05  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        fix message container selector for code review tool
        https://bugs.webkit.org/show_bug.cgi?id=51959

        * code-review.js:

2011-01-04  Ojan Vafai  <ojan@chromium.org>

        Increment version number to avoid getting the cached JS file.

        * PrettyPatch/PrettyPatch.rb:

2010-12-15  Ojan Vafai  <ojan@chromium.org>
 
        Reviewed by Adam Barth.

        anchor the toolbar to the bottom of the diff if the diff doesn't take a full screen of height
        https://bugs.webkit.org/show_bug.cgi?id=51162

        * PrettyPatch/PrettyPatch.rb:
        * code-review.js:

2011-01-01  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Move JavaScriptCore to Source
        https://bugs.webkit.org/show_bug.cgi?id=51604

        * PrettyPatch/PrettyPatch.rb: